# blog

./: pyproject.toml  readme.md
base/: api_mixins.py  mixins.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/api/: permissions.py  serializers.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_tags.py  0003_alter_article_slug.py
blog/templatetags/: article_tags.py
config/: settings.py  urls.py  yasg.py
static/images/: download.jfif
templates/: base.html
templates/article/: article_confirm_delete.html  article_create.html  article_detail.html  article_list.html  article_update.html  index.html
templates/components/: header.html  message.html  nav.html  pagination.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
templates/user_profile/: add_soc_net_link.html  user_profile.html  user_profile_list.html  user_profile_update.html
user_account/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  urls.py  views.py
user_account/api/: permissions.py  serializers.py  services.py  urls.py  views.py
user_account/migrations/: 0001_initial.py  0002_delete_sociallink.py  0003_sociallink.py  0004_auto_20210827_1141.py  0005_alter_sociallink_social_net_name.py
user_account/templatetags/: user_account_tags.py
utilets/: mixins.py
