[tool.poetry]
name = "my_blog"
version = "0.1.0"
description = ""
authors = ["RezuanDzibov <rezuan.dzbov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-taggit = "^1.5.1"
sorl-thumbnail = "^12.7.0"
django-crispy-forms = "^1.12.0"
Pillow = "^8.3.1"
django-ckeditor = "^6.1.0"
psycopg2 = "^2.9.1"
ipython = "^7.26.0"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
django-filter = "^2.4.0"
djoser = "^2.1.0"
django-extensions "^3.1.3"
djangorestframework-simplejwt = "^4.8.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
